feat: added how-it-works

--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@
         <div class="container">
           <div class="how-it-works__wrapper">
             <figure class="how-it-works__figure">
-              <img src="./assets/how-it-works-phone.png" alt="how-it-works" />
+              <img
+                class="how-it-works__figure-image"
+                src="./assets/how-it-works-phone.png"
+                alt="how-it-works"
+              />
             </figure>
 
             <div class="how-it-works__info">
