--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
             <a class="header__logo-link" href="#">/root</a>
           </div>
         </div>
-        <nav class="header__nav">
-          <a class="header__nav-link" href="#">Why Choose Us?</a>
-          <a class="header__nav-link" href="#">How It Works?</a>
-          <a class="header__nav-link" href="#">FAQ</a>
-        </nav>
+
+        <div class="header__menu">
+          <nav class="header__nav">
+            <a class="header__nav-link" href="#">Why Choose Us?</a>
+            <a class="header__nav-link" href="#">How It Works?</a>
+            <a class="header__nav-link" href="#">FAQ</a>
+          </nav>
+
+          <div class="header__contacts">
+            <div class="header__contacts-title">Contact us at</div>
+            <div class="header__contacts-email">
+              <a class="header__contacts-email-link" href="mailto:support@root.app">
+                support@root.app
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
