--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="header__menu">
           <div class="header__menu-wrapper">
             <nav class="header__nav">
-              <a class="header__nav-link" href="#">Why Choose Us?</a>
-              <a class="header__nav-link" href="#">How It Works?</a>
-              <a class="header__nav-link" href="#">FAQ</a>
+              <a class="header__nav-link" href="#whyChooseUs">Why Choose Us?</a>
+              <a class="header__nav-link" href="#howItWorks">How It Works?</a>
+              <a class="header__nav-link" href="#faq">FAQ</a>
             </nav>
 
             <div class="header__contacts">
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-      <section class="why-choose-us">
+      <section class="why-choose-us" id="whyChooseUs">
         <div class="container">
           <h2 class="why-choose-us__title">Why Choose Us?</h2>
 
@@ -140,7 +140,7 @@
         </div>
       </section>
 
-      <section class="how-it-works">
+      <section class="how-it-works" id="howItWorks">
         <div class="container">
           <div class="how-it-works__wrapper">
             <figure class="how-it-works__figure">
@@ -184,7 +184,7 @@
         </div>
       </section>
 
-      <section class="faq">
+      <section class="faq" id="faq">
         <div class="container">
           <h2 class="faq__title">FAQ</h2>
 
