feat: added privacy-policy

--- a/index.html
+++ b/index.html
@@ -221,31 +221,38 @@
         <div class="container">
           <h2 class="privacy-policy__title">Privacy Policy</h2>
 
-          <div class="privacy-policy__content">
+          <div class="privacy-policy__wrapper">
             <div class="privacy-policy__card">
-              <div class="privacy-policy__card-id">/1</div>
-              <div class="privacy-policy__card-text">
-                No information that you provide to the App is explicitly transmitted to us.The /root
-                does not collect information for purposes of our collection.
-                <b class="privacy-policy__card-text-main">We do not collect your data.</b>
+              <div class="privacy-policy__card-content">
+                <div class="privacy-policy__card-id">/1</div>
+                <div class="privacy-policy__card-text">
+                  No information that you provide to the App is explicitly transmitted to us.The
+                  /root does not collect information for purposes of our collection.
+                  <b class="privacy-policy__card-text-main">We do not collect your data.</b>
+                </div>
               </div>
             </div>
 
             <div class="privacy-policy__card">
-              <div class="privacy-policy__card-id">/2</div>
-              <div class="privacy-policy__card-text">
-                We will <b class="privacy-policy__card-text-main">update this privacy policy</b> as
-                needed so that it is current, accurate, and
-                <b class="privacy-policy__card-text-main">as clear as possible.</b> Your continued
-                use of our App confirms your acceptance of our updated Privacy Policy.
+              <div class="privacy-policy__card-content">
+                <div class="privacy-policy__card-id">/2</div>
+                <div class="privacy-policy__card-text">
+                  We will
+                  <b class="privacy-policy__card-text-main">update this privacy policy</b> as needed
+                  so that it is current, accurate, and
+                  <b class="privacy-policy__card-text-main">as clear as possible.</b> Your continued
+                  use of our App confirms your acceptance of our updated Privacy Policy.
+                </div>
               </div>
             </div>
 
             <div class="privacy-policy__card">
-              <div class="privacy-policy__card-id">/3</div>
-              <div class="privacy-policy__card-text">
-                /root provides network tunnels using the
-                <b class="privacy-policy__card-text-main">WireGuard and VLESS Protocols.</b>
+              <div class="privacy-policy__card-content">
+                <div class="privacy-policy__card-id">/3</div>
+                <div class="privacy-policy__card-text">
+                  /root provides network tunnels using the
+                  <b class="privacy-policy__card-text-main">WireGuard and VLESS Protocols.</b>
+                </div>
               </div>
             </div>
           </div>
